--- a/package.json
+++ b/package.json
@@ -25,16 +25,24 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "bcrypt": "^3.0.0",
+    "bluebird": "^3.5.2",
     "codeclimate-test-reporter": "^0.5.0",
     "coveralls": "^3.0.2",
+    "dotenv": "^6.0.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "express": "^4.16.3",
-    "nyc": "^13.0.1"
+    "istanbul": "^0.4.5",
+    "jsonwebtoken": "^8.3.0",
+    "nyc": "^13.0.1",
+    "pg": "^7.4.3",
+    "pg-promise": "^8.4.6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
+    "cors": "^2.8.4",
     "cross-env": "^5.2.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
