--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "seed": "babel-node server/seeders/up",
     "seed:undo": "babel-node server/seeders/down",
     "db:setup": "npm run migrate && npm run seed",
+    "pretest": "SET \"NODE_ENV=test\" && npm run db:setup",
+    "postest": "SET \"NODE_ENV=test\" && npm run seed:undo",
     "test": "cross-env NODE_ENV=test nyc mocha --timeout 10000 --require babel-register server/test --exit",
     "coverage": "nyc report --reporter=text-lcov --reporter=lcov | coveralls",
     "migrate": "babel-node server/db"
