--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "jsonwebtoken": "^8.3.0",
     "nyc": "^13.0.1",
     "pg": "^7.4.3",
-    "pg-promise": "^8.4.6"
+    "pg-promise": "^8.4.6",
+    "swagger-ui-express": "^4.0.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
